# PyObfuscate

./: README.md  input_file.py  pyproject.toml  run.py
src/pyobfuscate/: main.py  obfuscator.py  transformer.py  utils.py
src/tests/: test_cli.py  test_python_obfuscator.py
