[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyobfuscate"
version = "0.1.0"
description = "A Python code obfuscator that renames variables, functions, and classes to random names."
authors = [
    { name = "Alper Karaca", email = "" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "astor>=0.8.1",
    "argparse>=1.4.0",
]

[project.scripts]
pyobfuscate = "pyobfuscate.main:main"

[project.urls]
Homepage = "https://github.com/thealper2/PyObfuscate"
Repository = "https://github.com/thealper2/PyObfuscate"
Bug Tracker = "https://github.com/thealper2/PyObfuscate/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyobfuscate = ["*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["pyobfuscate"]